--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ nav{
         border: none;
     }
     .btn3{
-        
+        margin-left: 0px;
     }
     .menu-footer ul{
         display: none;
